<resources>
    <string name="app_name">BoaViagem</string>
    <string name="usuario">Usuario</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="erro_autenticacao">Usuário ou Senha inválidos</string>
    <string name="novo_gasto">Novo Gasto</string>
    <string name="nova_viagem">Nova Viagem</string>
    <string name="minhas_viagens">Minhas Viagens</string>
    <string name="configuracoes">Configurações</string>
    <string name="destino">Destino</string>
    <string name="tipo_da_viagem">Tipo da Viagem</string>
    <string name="lazer">Lazer</string>
    <string name="negocios">Negocios</string>
    <string name="data_da_chegada">Data da Chegada</string>
    <string name="data_da_saida">Data da Saída</string>
    <string name="selecione">Selecione</string>
    <string name="orcamento">Orçamento</string>
    <string name="quantidade_de_pessoas">Quantidade de Pessoas</string>
    <string name="salvar">Salvar</string>
    <string name="valor">Valor</string>
    <string name="data">Data</string>
    <string name="descricao">Descrição</string>
    <string name="local">Local</string>
    <string name="gastei">Gastei!</string>
    <string name="categoria">Categoria</string>
    <string name="sair">Sair</string>
    <string name="remover_viagem">Remover Viagem</string>
    <string name="remover">Remover</string>
    <string name="editar">Editar</string>
    <string name="gastos_realizados">Gastos Realizados</string>
    <string name="opcoes">Opções</string>
    <string name="informe_valor_limite">Informe Valor Limite</string>
    <string name="preferencias">Preferencias</string>
    <string name="modo_viagem_sumario">Modo Viagem Sumário</string>
    <string name="modo_viagem">Modo Viagem</string>
    <string name="informar_valor_limite">Informar Valor Limite</string>
    <string name="valor_limite_sumario">Valor Limite Sumário</string>
    <string name="valor_limite">Valor Limite</string>
    <string name="manter_conectado">Manter Conectado</string>
    <string name="registro_salvo">Registro Salvo</string>
    <string name="viagem_removida">Viagem Removida</string>
    <string name="erro_salvar">Erro ao Salvar</string>
    <string name="viagem_ativa">Viagem Ativa</string>
    <string name="sem_viagem">Sem Viagens Cadastradas</string>
    <string-array name="categoria_gasto">
        <item>Alimentação</item>
        <item>Combustível</item>
        <item>Transporte</item>
        <item>Hospedagem</item>
        <item>Outros</item>
    </string-array>
</resources>
