<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <PreferenceCategory android:title="@string/preferencias">
        <CheckBoxPreference
            android:key="modo_viagem"
            android:summary="@string/modo_viagem_sumario"
            android:title="@string/modo_viagem" />

        <ListPreference
            android:dependency="modo_viagem"
            android:key="viagem_ativa"
            android:title="@string/viagem_ativa"
            android:dialogTitle="@string/viagem_ativa" />


        <EditTextPreference
            android:dialogTitle="@string/informar_valor_limite"
            android:key="valor_limite"
            android:defaultValue="80"
            android:summary="@string/valor_limite_sumario"
            android:title="@string/valor_limite" />
    </PreferenceCategory>

</PreferenceScreen>